2018-10-24  Mark Wielaard  <mark@klomp.org>

	* readelf.c (section_name): Remove ehdr argument, lookup shstrndx.
	(print_debug_abbrev_section): Don't pass ehdr.
	(print_debug_addr_section): Likewise.
	(print_decoded_aranges_section): Likewise.
	(print_debug_aranges_section): Likewise.
	(print_debug_rnglists_section): Likewise.
	(print_debug_ranges_section): Likewise.
	(print_debug_units): Likewise.
	(print_decoded_line_section): Likewise.
	(print_debug_line_section): Likewise.
	(print_debug_loclists_section): Likewise.
	(print_debug_loc_section): Likewise.
	(print_debug_macinfo_section): Likewise.
	(print_debug_macro_section): Likewise.
	(print_debug_pubnames_section): Likewise.
	(print_debug_str_section): Liekwise.
	(print_debug_str_offsets_section): Likewise.
	(print_gdb_index_section): Likewise.

2018-10-16  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_frame_section): Make sure readp is never
	greater than cieend.

2018-10-19  Mark Wielaard  <mark@klomp.org>

	* dwfl_module_getdwarf.c (adjust_relocs): Check sh_entsize is not
	zero.
	(add_new_section_symbols): Likewise.
	(copy_elided_sections): Likewise.

2018-10-18  Mark Wielaard  <mark@klomp.org>

	* size.c (handle_ar): Only close elf if prefix was NULL.

2018-10-18  Mark Wielaard  <mark@klomp.org>

	* arlib.c (arlib_add_symbols): Check that sh_entsize is not zero.

2018-10-14  Mark Wielaard  <mark@klomp.org>

	* ar.c (do_oper_extract): Assume epoch if ar_date is bogus.

2018-10-14  Mark Wielaard  <mark@klomp.org>

	* findtextrel.c (process_file): Check that sh_entsize is not zero.

2018-09-13  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_macro_section): Use elf_getdata. Print
	decoded flag string.
2018-09-13  Mark Wielaard  <mark@klomp.org>

2018-10-19  Mark Wielaard  <mark@klomp.org>

	* unstrip.c (copy_elided_sections): Renumber group section indexes.

2018-10-12  Mark Wielaard  <mark@klomp.org>

	* strip.c (handle_elf): Don't remove SHF_GROUP flag from sections.